feat: create css grid, items, etc

--- a/css-grid.html
+++ b/css-grid.html
@@ -21,6 +21,20 @@
       </h1>
       <a href="/">go back</a>
     </nav>
+    <section class="container">
+      <div class="container__child container__child-long">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+      <div class="container__child">test</div>
+    </section>
   </main>
 </body>
 
