feat: add new css properties

--- a/css-flex.html
+++ b/css-flex.html
@@ -33,6 +33,18 @@
       <p class="container__child">three </p>
       <p class="container__child">four </p>
     </div>
+    <div class="container display-flex container--flex-wrap">
+      <p class="container__child">one </p>
+      <p class="container__child">two </p>
+      <p class="container__child">three </p>
+      <p class="container__child">four </p>
+    </div>
+    <div class="container display-flex flex-reverse container--flex-wrap">
+      <p class="container__child">one </p>
+      <p class="container__child">two </p>
+      <p class="container__child">three </p>
+      <p class="container__child">four </p>
+    </div>
   </main>
 </body>
 
