--- a/css-flex.html
+++ b/css-flex.html
@@ -39,11 +39,35 @@
       <p class="container__child">three </p>
       <p class="container__child">four </p>
     </div>
+
     <div class="container display-flex flex-reverse container--flex-wrap">
       <p class="container__child">one </p>
       <p class="container__child">two </p>
       <p class="container__child">three </p>
       <p class="container__child">four </p>
+    </div>
+
+    <div class="container container__wrapper">
+      <div class="container container--full display-flex flex-col">
+        <p class="container__child">one </p>
+        <p class="container__child">two </p>
+        <p class="container__child">three </p>
+      </div>
+      <div class="container container--full display-flex flex-reverse-col flex-col">
+        <p class="container__child">one </p>
+        <p class="container__child">two </p>
+        <p class="container__child">three </p>
+      </div>
+      <div class="container container--full display-flex flex-col">
+        <p class="container__child">one </p>
+        <p class="container__child">two </p>
+        <p class="container__child">three </p>
+      </div>
+      <div class="container container--full display-flex flex-reverse-col flex-col">
+        <p class="container__child">one </p>
+        <p class="container__child">two </p>
+        <p class="container__child">three </p>
+      </div>
     </div>
   </main>
 </body>
