feat: update flex container

--- a/css-flex.html
+++ b/css-flex.html
@@ -22,26 +22,26 @@
       <a href="/">go back</a>
     </nav>
     <div class="container display-flex">
-      <p class="container__child">one </p>
+      <p class="container__child container__child--full">one </p>
       <p class="container__child">two </p>
       <p class="container__child">three </p>
       <p class="container__child">four </p>
     </div>
     <div class="container display-flex flex-reverse">
       <p class="container__child">one </p>
-      <p class="container__child">two </p>
-      <p class="container__child">three </p>
+      <p class="container__child ">two </p>
+      <p class="container__child container__child--full">three </p>
       <p class="container__child">four </p>
     </div>
     <div class="container display-flex container--flex-wrap">
       <p class="container__child">one </p>
       <p class="container__child">two </p>
-      <p class="container__child">three </p>
+      <p class="container__child container__child--full">three </p>
       <p class="container__child">four </p>
     </div>
 
     <div class="container display-flex flex-reverse container--flex-wrap">
-      <p class="container__child">one </p>
+      <p class="container__child container__child--full">one </p>
       <p class="container__child">two </p>
       <p class="container__child">three </p>
       <p class="container__child">four </p>
@@ -50,7 +50,7 @@
     <div class="container container__wrapper">
       <div class="container container--full display-flex flex-col">
         <p class="container__child">one </p>
-        <p class="container__child">two </p>
+        <p class="container__child ">two </p>
         <p class="container__child">three </p>
       </div>
       <div class="container container--full display-flex flex-reverse-col flex-col">
