--- a/css-flex.html
+++ b/css-flex.html
@@ -47,7 +47,7 @@
       <p class="container__child">four </p>
     </div>
 
-    <div class="container container__wrapper">
+    <div class="container__wrapper">
       <div class="container container--full display-flex flex-col">
         <p class="container__child">one </p>
         <p class="container__child ">two </p>
